# Vialpando

./: .clang-format  .gitmodules  CMakeLists.txt  basic.cpp  basic.hpp  main.cpp  menu.cpp  menu.hpp  translate.cpp  translate.hpp  view.hpp
.github/workflows/: build.yml
Simulations/: dynamic_law.cpp  dynamic_law.hpp  electric_field.cpp  electric_field.hpp  electric_field_needle.cpp  electric_field_pendulum.cpp  gravity.cpp  gravity.hpp  optics.cpp  optics.hpp  work_and_energy.cpp  work_and_energy.hpp
mechanisms/: angle.cpp  angle.hpp  coordinates.cpp  coordinates.hpp
po/: en.po  pl.po  translate.pot
tests/: CMakeLists.txt
tests/mechanisms/: angle.cpp  coordinates.cpp
